fix: fill whole screen width on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
 #main-container {
   display: flex;
 }
-
-#main-container div {
-  margin: auto;
-}
